--- a/ApiExamples/VisualBasic/ApiExamples.vbproj
+++ b/ApiExamples/VisualBasic/ApiExamples.vbproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -6,7 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{68C83549-677D-4986-9B23-24D8DB11ED52}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <AssemblyName>ApiExamples</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <OptionExplicit>On</OptionExplicit>
@@ -106,7 +107,9 @@
     <Compile Include="ExProperties.vb" />
     <Compile Include="ApiExampleBase.vb" />
     <Compile Include="ExRange.vb" />
-    <Compile Include="ExRendering.vb" />
+    <Compile Include="ExRendering.vb">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ExReportingEngine.vb" />
     <Compile Include="ExImageSaveOptions.vb" />
     <Compile Include="ExHtmlSaveOptions.vb" />
